test/valid/Figures/Figure.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: Figure.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
abstract class Figure extends Object is

  abstract method area : () -> Integer